Documentation edits made through Mintlify web editor

--- a/vps-management/os-availability.mdx
+++ b/vps-management/os-availability.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Operating System Availability on EDBB"
-description: "Understand which operating systems are available during order and which additional OS images can be selected later in the dashboard for auto-installation."
+description: "Understand which operating systems are available during order and which additional OS images can be selected later in the control panel for auto-installation."
 sidebarTitle: "Available OS Images"
 ---
 
 ## Operating System Availability
 
 EDBB provides a wide selection of operating systems for VPS deployments.\
-However, the list of OS images shown **during the initial order** is intentionally different from the list shown later in the **dashboard (Auto-Installation)**.
+The list of OS images shown **during the initial order** is intentionally different from the list shown later in the **Control Panel (Auto-Installation)**.
 
 This guide explains the differences and helps you choose the right OS for your setup.
 
@@ -86,7 +86,7 @@ This includes:
 - Archived OS templates
 - More advanced choices intended for experienced users
 
-### **Full OS List in Dashboard Auto-Install**
+### **Full OS List in Control Panel Auto-Install**
 
 #### **Debian**
 
