Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -19,8 +19,14 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 
 **🛒 Purchase Traffic**: Choose the amount of traffic you need and [Top Up](https://manage.edisglobal.com/cart.php?gid=214) your Traffic Pool.
 
-**🎁 Traffic Pool Starter Credit**: Every new VPS includes **100 GB of Traffic Pool Starter Credit**.  
-This credit **never expires**, can be applied to **any VPS in your account**, and can be used **manually** when a server runs out of traffic — or automatically through **Auto Hydration**.
+**🌐 Traffic Pool Starter Credit**: Every new VPS includes **100 GB of Traffic Pool Starter Credit**.  
+This one-time credit helps you explore the Traffic Pool feature and gives you a buffer for unexpected traffic bursts.
+
+Your 100 GB starter credit:
+
+- **never expires**
+- **can be assigned to any VPS** in your account
+- can be used **manually** or **automatically** via *Auto-Hydration*
 
 **📌 Assign Traffic**: Once payment is complete, head to the **Traffic** **tab** in your control panel to assign traffic to your VPS. Use +100GB, +500GB, +1TB, +10TB buttons for **Manual Hydration**.
 
