Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -15,16 +15,19 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 - Traffic purchases are instant and are logged in the pool log.
 - Traffic assignments are instant and are logged in the hydration log
 
-## 🌐 Traffic Pool Starter Credit
+---
 
-Every new VPS includes **100 GB of Traffic Pool Starter Credit**.  
-This one-time credit helps you explore the Traffic Pool feature and gives you a buffer for unexpected traffic bursts.
+## Traffic Pool Starter Credit
+
+Starting **November 19, 2025**, every newly purchased VPS includes **100 GB of complimentary traffic**. EDIS Global automatically adds **\+100 GB** to your Traffic Pool account for each new VPS you order. This starter credit lets you explore how the Traffic Pool works — and gives you a safety buffer if you ever run low on traffic.
 
 Your 100 GB starter credit:
 
 - **never expires**
 - **can be assigned to any VPS** in your account
-- can be used **manually** or **automatically** via *Auto-Hydration*
+- works with both **manual-** and **Auto-Hydration**
+
+---
 
 ## How to Get Started
 
@@ -43,16 +46,16 @@ Your 100 GB starter credit:
 
 ---
 
-## Traffic Pool Accounting Balance Sheet
+## Traffic Pool Balance Sheet 
 
-The balance sheet below (demo data) works like a bank account statement.  
-We log **traffic top-ups**, **pool traffic consumption**, and the resulting balance after each transaction.  
-This report provides a transparent overview of **traffic pool usage across your entire VPS hosting account**.
+The traffic pool balance sheet (pool log) below works like a bank account statement.  
+We log **traffic top-ups**, **pool traffic usage**, and the resulting balance after each transaction.  
+This report (demo data below) provides a transparent overview of **traffic pool usage across your entire VPS hosting account**.
 
 **How to Read the Balance Sheet**
 
 - **Date/Time:** Timestamp of the transaction  
-- **Source:** The VPS instance consuming traffic, or a Traffic Pool Top-Up  
+- **Source:** VPS consuming traffic, a Traffic Pool Top-Up, or Starter Credit
 - **Change:** Traffic added (positive) or used (negative)  
 - **New Balance:** Remaining traffic after the transaction  
 
