Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -19,7 +19,7 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 
 ## Traffic Pool Starter Credit
 
-Starting **November 19, 2025**, every newly purchased VPS includes **100 GB of complimentary traffic**. EDIS Global automatically adds **\+100 GB** to your Traffic Pool account for each new VPS you order. This starter credit lets you explore how the Traffic Pool works — and gives you a safety buffer if you ever run low on traffic.
+Starting **November 19, 2025**, every newly purchased VPS includes **100 GB of complimentary traffic**. We automatically add **\+100 GB** to your Traffic Pool account for each new VPS you order. This starter credit lets you explore how the Traffic Pool works — and gives you a safety buffer if you ever run low on traffic.
 
 Your 100 GB starter credit:
 
