--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Understand Traffic Pool"
+title: "EDBB Traffic Pool"
 sidebarTitle: "Traffic Pool"
-description: "Learn how EDBB traffic pool works, how to assign traffic to your VPS (manually or automatically)"
+description: "Learn more about your traffic pool, Starter Credits, how to get started, how to buy and assign traffic to your VPS (manually or automatically)"
 ---
 
 ## What Is a Traffic Pool
