Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -1,7 +1,7 @@
 ---
 title: "EDBB Traffic Pool"
 sidebarTitle: "Traffic Pool"
-description: "Learn more about your traffic pool, Starter Credits, how to get started, how to buy and assign traffic to your VPS (manually or automatically)"
+description: "Learn more about your traffic pool, starter credit, how to get started in general (buy and assign traffic)"
 ---
 
 ## What Is a Traffic Pool
